SERVER-38620 Set _prepareOpTime in prepareTransaction if transaction is in recovery